# mira

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  pyproject.toml  requirements-lock.txt
captures/_rehearsal/: aavso_RR_Lyr.txt
config/: fairbanks.yaml  horizon_balcony_jc.yaml  jersey_city.yaml  multi_site.yaml  s30_pro_jc.yaml
data/webapp_runs/: 865520c36d26.json  sessions.db
docs/: FIELD_GUIDE.md  architecture.md  comp_stars_example.json  concepts.md  getting_started.md  horizon_profile.md  infographic_prompts.md  nina_setup.md  photometry.md  troubleshooting.md
docs/comp_stars/: v_cvn.json
output/: best_fairbanks.csv  best_jersey_city.csv  candidate_queue.csv  research_notes.md  shared_targets.csv
output/candidate_packets/: AD_CrB.md  AQ_And.md  ASASSN_V_J160002_35_453848_8.md  ASASSN_V_J180001_26_355054_1.md  ASAS_J120005_1552_4.md  AS_Ari.md  AX_And.md  BF_Cam.md  BH_And.md  CD_And.md  CM_And.md  CR_And.md  CSS_J080001_0_474500.md  CSS_J100002_7_091420.md  CT_Aur.md  CV_Aur.md  EE_And.md  EM_And.md  FM_Boo.md  FM_Cam.md  FP_Cam.md  GH_Dra.md  GU_Dra.md  Gaia_DR3_1593634081740439936.md  Gaia_DR3_1596375782703460480.md  Gaia_DR3_1991157769123098752.md  Gaia_DR3_4503175632500692480.md  HL_And.md  HM_And.md  (+23 more)
scripts/: bootstrap.ps1
targets/: m51.yaml
tests/: test_aavso.py  test_aavso_network.py  test_anomaly.py  test_cache.py  test_capture.py  test_capture_cli_config.py  test_cleanup.py  test_cull.py  test_cull_fits.py  test_db.py  test_doctor.py  test_finish_progress.py  test_finishing.py  test_fits_stats.py  test_flats.py  test_gaia.py  test_horizon.py  test_lightcurve.py  test_nightly_html.py  test_nina_client.py  test_observability.py  test_photometry.py  test_rehearsal.py  test_runs_thread_safety.py  test_scheduler.py  test_scoring.py  test_session_plan.py  test_session_schedule.py  test_settings.py  test_simbad.py  test_siril.py  test_solve.py  test_stack_auto_solve.py  test_submit_pipeline.py  test_tonight_pipeline.py  test_tuning.py  test_vsp.py  test_vsx.py  test_vsx_network.py  test_webapp.py  (+2 more)
(+259 files in other folders)
