[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mira"
version = "0.1.0"
description = "Backyard observing assistant for variable-star photometry — generates schedules, runs photometry, and submits to AAVSO."
requires-python = ">=3.11"
dependencies = [
  "astropy>=6.0",
  "Flask>=3.0",
  "matplotlib>=3.8",
  "photutils>=2.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.11",
  "tzdata>=2025.2",
]

[project.scripts]
mira = "mira.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
